--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
     border-radius: 10px;
     overflow: hidden;
     background:#F0F8FF;
-    margin-top:5%;
+    box-shadow: 0 0 120px rgba(0, 0, 0, 0.3);
+    margin-top:2%;
      height: 600px;
     gap: 70px;
 
@@ -39,6 +40,9 @@ img{
 
  }
  @media  (min-width: 320px)and (max-width: 768px) {
+    h2{
+        font-size:   larger;
+    }
     #main {
         width: 90%;
         height: auto;
@@ -46,7 +50,7 @@ img{
         flex-wrap: wrap;
         justify-content: center;
         gap: 10px;
-        margin-top: 50px;
+       /* margin-top: 50px;*/
     }
 
     div {
@@ -59,7 +63,7 @@ img{
         height:  max-content;
         border-radius: 50px;
         width: 100%; /* كل div يأخذ تقريبًا ثلث العرض ليظهر 3 في كل سطر */
-        height:   115px;
+        height:   135px;
 
     }
     }}
@@ -86,10 +90,23 @@ img{
             margin: 10px;
         }
     
-        img {
-            width: 100%;
-            height: auto;
-            border-radius: 50px;
-        }
+         
+    img {
+        height:  max-content;
+        border-radius: 50px;
+        width: 100%; /* كل div يأخذ تقريبًا ثلث العرض ليظهر 3 في كل سطر */
+        height:   130px;
+
+    }
     }
     
+    h4{
+        font-style: italic;
+        text-align: center;
+        color: rgb(24, 26, 71);
+    }
+    h2{
+        font-style: italic;
+        text-align: center;
+        color: rgb(24, 26, 71);
+    }
